--- a/index.html
+++ b/index.html
@@ -37,4 +37,10 @@
   </div>
   <script type="text/javascript" src="index.js"></script>
 </body>
-</html>
+</html>const input = document.getElementById('button');
+
+function clickAlert() {
+  alert('I was clicked!');
+}
+
+input.addEventListener('click', clickAlert);
